--- a/public/js/app/ubigeos/views/index.html
+++ b/public/js/app/ubigeos/views/index.html
@@ -55,31 +55,33 @@
                       <button type="button" class="btn btn-default" ng-click="cancelUbigeo()">No</button>
                     </p>
                   </div>
-                  <table class="table table-bordered">
-                    <tr>
-                      <th style="width: 10px">#</th>
-                      <th>CODIGO</th>
-                      <th>DEPARTAMENTO</th>
-                      <th>PROVINCIA</th>
-                      <th>DISTRITO</th>
+                  <div class="box-body table-responsive no-padding">
+                    <table class="table table-bordered">
+                      <tr>
+                        <th style="width: 10px">#</th>
+                        <th>CODIGO</th>
+                        <th>DEPARTAMENTO</th>
+                        <th>PROVINCIA</th>
+                        <th>DISTRITO</th>
                       
-                      <th style="width: 40px">Editar</th>
-                      <th style="width: 40px">Eliminar</th>
-                    </tr>
+                        <th style="width: 40px">Editar</th>
+                        <th style="width: 40px">Eliminar</th>
+                      </tr>
                     
-                    <tr ng-repeat="row in ubigeos">
-                      <td>{{$index + 1}}</td>
-                      <td>{{row.codigo}}</td>
-                      <td>{{row.departamento}}</td>
-                      <td>{{row.provincia}}</td>
-                      <td>{{row.distrito}}</td>
-                      <td><a ng-click="editUbigeo(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deleteUbigeo(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                      <tr ng-repeat="row in ubigeos">
+                        <td>{{$index + 1}}</td>
+                        <td>{{row.codigo}}</td>
+                        <td>{{row.departamento}}</td>
+                        <td>{{row.provincia}}</td>
+                        <td>{{row.distrito}}</td>
+                        <td><a ng-click="editUbigeo(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                        <td><a ng-click="deleteUbigeo(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
-                    </tr>
+                      </tr>
                     
                     
-                  </table>
+                    </table>
+                  </div>
                 </div><!-- /.box-body -->
                 <div class="box-footer clearfix">
                   <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm no-margin pull-right" items-per-page="itemsperPage" boundary-links="true" rotate="false" num-pages="numPages" ng-change="pageChanged()"></pagination>
