--- a/public/js/app/users/views/index.html
+++ b/public/js/app/users/views/index.html
@@ -52,41 +52,43 @@
                       <button type="button" class="btn btn-default" ng-click="cancelUser()">No</button>
                     </p>
                   </div>
-                  <table class="table table-bordered">
-                    <tr>
-                      <th style="width: 10px">#</th>
-                      <th>Nombre</th>
-                      <th>email</th>
-                      <th>Rol</th>
-                      <th>Editar</th>
-                      <th >Opción</th>
-                      <th >Eliminar</th>
-                    </tr>
+                  <div class="box-body table-responsive no-padding">
+                      <table class="table table-bordered">
+                        <tr>
+                          <th style="width: 10px">#</th>
+                          <th>Nombre</th>
+                          <th>email</th>
+                          <th>Rol</th>
+                          <th>Editar</th>
+                          <th >Opción</th>
+                          <th >Eliminar</th>
+                        </tr>
                     
-                    <tr ng-repeat="row in users">
-                      <td>{{$index + 1}}</td>
+                        <tr ng-repeat="row in users">
+                          <td>{{$index + 1}}</td>
 
-                      <td>{{row.name }}</td>
-                      <td>{{row.email}}</td>
-                      <td ng-if="row.role_id == '1'">Admin</td>
+                          <td>{{row.name }}</td>
+                          <td>{{row.email}}</td>
+                          <td ng-if="row.role_id == '1'">Admin</td>
                         <td ng-if="row.role_id == '2'">Administrativo</td>
                         <td ng-if="row.role_id == 3">Tecnico</td>
 
-                      <td><a ng-click="editUser(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                        <td>
-                           <span ng-if="row.estado == 1">
-                          <a ng-click="disableUser(row)" class="btn bg-purple-active color-palette btn-xs">Deshabilitar</a>
+                        <td><a ng-click="editUser(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                          <td>
+                            <span ng-if="row.estado == 1">
+                            <a ng-click="disableUser(row)" class="btn bg-purple-active color-palette btn-xs">Deshabilitar</a>
+                              </span>
+                            <span ng-if="row.estado == 0">
+                            <a ng-click="disableUser(row)" class="btn bg-purple-active color-palette btn-xs">Habilitar</a>
                              </span>
-                          <span ng-if="row.estado == 0">
-                          <a ng-click="disableUser(row)" class="btn bg-purple-active color-palette btn-xs">Habilitar</a>
-                             </span>
-                        </td>
-                      <td><a ng-click="deleteUser(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                          </td>
+                        <td><a ng-click="deleteUser(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
-                    </tr>
+                      </tr>
                     
                     
-                  </table>
+                    </table>
+                  </div>
                 </div><!-- /.box-body -->
                 <div class="box-footer clearfix">
                   <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm no-margin pull-right" items-per-page="itemsperPage" boundary-links="true" rotate="false" num-pages="numPages" ng-change="pageChanged()"></pagination>
