--- a/public/js/app/productos/views/index.html
+++ b/public/js/app/productos/views/index.html
@@ -1,6 +1,6 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>Farmacias
+          <h1>Productos
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
@@ -17,7 +17,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/tiendas/create" type="submit" class="btn btn-primary pull-left">Agregar Farmacia</a> 
+          <a href="/tiendas/create" type="submit" class="btn btn-primary pull-left">Agregar Producto</a> 
           </div>
         </div>
         </br>
