--- a/public/js/app/almacenes/views/index.html
+++ b/public/js/app/almacenes/views/index.html
@@ -1,23 +1,23 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>Farmacias
+          <h1>Almacenes
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Farmacias</li>
+            <li class="active">Almacenes</li>
           </ol>
 
-          
+
         </section>
 
-        
+
 
         <!-- Main content -->
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/tiendas/create" type="submit" class="btn btn-primary pull-left">Agregar Farmacia</a> 
+          <a href="/almacenes/create" type="submit" class="btn btn-primary pull-left">Agregar Almacen</a>
           </div>
         </div>
         </br>
@@ -25,12 +25,12 @@
             <div class="col-md-12">
 
 
-              <div class="box"> 
+              <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Farmacias</h3>
+                  <h3 class="box-title">Almacenes</h3>
                   <div class="box-tools">
-                  <form ng-keyup="searchTienda()">
+                  <form ng-keyup="searchAlmacen()">
                     <div class="input-group" style="width: 200px;">
                       <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
                       <div class="input-group-btn">
@@ -39,7 +39,7 @@
                     </div>
                     </form>
                   </div>
-                </div><!-- /.box-header -->  
+                </div><!-- /.box-header -->
                 <div class="box-body">
                     <div class="row">
                         <div class="col-sm-10">
@@ -48,11 +48,11 @@
                             </div>
                         </div>
                     </div>
-                <div class="callout callout-info"  ng-show="tienda.id">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{tienda.nombreTienda}}" ?</h4>
+                <div class="callout callout-info"  ng-show="almacenes.id">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{almacenes.nombreAlmacen}}" ?</h4>
                     <p>
-                      <button type="button" class="btn btn-danger" ng-click="destroyTienda()">Si</button>
-                      <button type="button" class="btn btn-default" ng-click="cancelTienda()">No</button>
+                      <button type="button" class="btn btn-danger" ng-click="destroyAlmacen()">Si</button>
+                      <button type="button" class="btn btn-default" ng-click="cancelAlmacen()">No</button>
                     </p>
                   </div>
                   <div class="box-body table-responsive no-padding">
@@ -60,30 +60,26 @@
                       <tr>
                         <th style="width: 10px">#</th>
                         <th>NOMBRE</th>
-                        <th>RAZON SOCIAL</th>
-                        <th>RUC</th>
-                        <th>DIRECCION</th>
-                        <th>TELEFONO MOVIL</th>
-                        <th>TELEFONO FIJO</th>
-                      
+                        <th>DESCRIPCION</th>
+                        <th>TIENDA</th>
+
+
                         <th style="width: 40px">Editar</th>
                         <th style="width: 40px">Eliminar</th>
                       </tr>
-                    
-                      <tr ng-repeat="row in tiendas">
+
+                      <tr ng-repeat="row in almacenes">
                         <td>{{$index + 1}}</td>
-                        <td>{{row.nombreTienda}}</td>
-                        <td>{{row.razonSocial}}</td>
-                        <td>{{row.ruc}}</td>
-                        <td>{{row.direccion}}</td>
-                        <td>{{row.telMovil}}</td>
-                        <td>{{row.telFijo}}</td>
-                        <td><a ng-click="editTienda(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                        <td><a ng-click="deleteTienda(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
-                      
+                        <td>{{row.nombreAlmacen}}</td>
+                        <td>{{row.descripcion}}</td>
+                        <td>{{row.tienda.nombreTienda}}</td>
+
+                        <td><a ng-click="editAlmacen(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                        <td><a ng-click="deleteAlmacen(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+
                       </tr>
-                    
-                    
+
+
                     </table>
                   </div>
                 </div><!-- /.box-body -->
@@ -94,6 +90,6 @@
 
                 </div>
               </div><!-- /.box -->
-            </div>  
+            </div>
           </div>
         </section>
