--- a/public/js/app/almacenes/views/index.html
+++ b/public/js/app/almacenes/views/index.html
@@ -61,7 +61,7 @@
                         <th style="width: 10px">#</th>
                         <th>NOMBRE</th>
                         <th>DESCRIPCION</th>
-                        <th>TIENDA</th>
+                        <th>FARMACIA</th>
 
 
                         <th style="width: 40px">Editar</th>
