--- a/public/js/app/laboratorios/views/index.html
+++ b/public/js/app/laboratorios/views/index.html
@@ -1,11 +1,11 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>Marcas
+          <h1>Laboratorios
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Marcas</li>
+            <li class="active">Laboratorios</li>
           </ol>
         </section>        
 
@@ -13,7 +13,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/brands/create" type="submit" class="btn btn-primary pull-left">Agregar Marca</a> 
+          <a href="/laboratorios/create" type="submit" class="btn btn-primary pull-left">Agregar Laboratorio</a> 
           </div>
         </div>
         </br>
@@ -24,9 +24,9 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Marcas</h3>
+                  <h3 class="box-title">Laboratorios</h3>
                   <div class="box-tools">
-                  <form ng-keyup="searchBrand()">
+                  <form ng-keyup="searchLaboratorio()">
                     <div class="input-group" style="width: 200px;">
                       <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
                       <div class="input-group-btn">
@@ -44,11 +44,11 @@
                             </div>
                         </div>
                     </div>
-                <div class="callout callout-info"  ng-show="brand.id">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{Brand.nombre}}" ?</h4>
+                <div class="callout callout-info"  ng-show="laboratorios.id">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{Laboratorio.nombre}}" ?</h4>
                     <p>
-                      <button type="button" class="btn btn-danger" ng-click="destroyBrand()">Si</button>
-                      <button type="button" class="btn btn-default" ng-click="cancelBrand()">No</button>
+                      <button type="button" class="btn btn-danger" ng-click="destroyLaboratorio()">Si</button>
+                      <button type="button" class="btn btn-default" ng-click="cancelLaboratorio()">No</button>
                     </p>
                   </div>
                   <div class="box-body table-responsive no-padding">
@@ -56,20 +56,18 @@
                     <tr>
                       <th style="width: 10px">#</th>
                       <th>Nombre</th>
-                      <th>ShortName</th>
                       <th>Descripción</th>
                       
                       <th style="width: 40px">Editar</th>
                       <th style="width: 40px">Eliminar</th>
                     </tr>
                     
-                    <tr ng-repeat="row in brands">
+                    <tr ng-repeat="row in laboratorios">
                       <td>{{$index + 1}}</td>
                       <td>{{row.nombre}}</td>
-                      <td>{{row.shortname}}</td>
                       <td>{{row.descripcion}}</td>
-                      <td><a ng-click="editBrand(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deleteBrand(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                      <td><a ng-click="editLaboratorio(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                      <td><a ng-click="deleteLaboratorio(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
                     
