--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -16,7 +16,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/products/create" type="submit" class="btn btn-primary pull-left">Añadir Producto</a>
+          <a href="/products/create" type="submit" class="btn btn-primary pull-left">Nuevo Producto</a>
           </div>
 
         </div>
