--- a/public/js/app/tipoProductos/views/index.html
+++ b/public/js/app/tipoProductos/views/index.html
@@ -1,11 +1,11 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>Tipos de Documentos
+          <h1>Tipos de Productos
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Tipos de Documentos</li>
+            <li class="active">Tipos de Productos</li>
           </ol>
         </section>
 
@@ -13,7 +13,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/tipoDocumentos/create" type="submit" class="btn btn-primary pull-left">Agregar Documento</a> 
+          <a href="/tipoProductos/create" type="submit" class="btn btn-primary pull-left">Agregar Nuevo Tipo</a> 
           </div>
         </div>
         </br>
@@ -24,9 +24,9 @@
               <div class="box"> 
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Documentos</h3>
+                  <h3 class="box-title">Tipos de Productos</h3>
                   <div class="box-tools">
-                  <form ng-keyup="searchTipoDocumento()">
+                  <form ng-keyup="searchTipoProducto()">
                     <div class="input-group" style="width: 200px;">
                       <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
                       <div class="input-group-btn">
@@ -44,11 +44,11 @@
                             </div>
                         </div>
                     </div>
-                <div class="callout callout-info"  ng-show="tipoDocumento.id">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{tipoDocumento.nombreDocumento}}" ?</h4>
+                <div class="callout callout-info"  ng-show="tipoProducto.id">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{tipoProducto.nombre}}" ?</h4>
                     <p>
-                      <button type="button" class="btn btn-danger" ng-click="destroyTipoDocumento()">Si</button>
-                      <button type="button" class="btn btn-default" ng-click="cancelTipoDocumento()">No</button>
+                      <button type="button" class="btn btn-danger" ng-click="destroyTipoProducto()">Si</button>
+                      <button type="button" class="btn btn-default" ng-click="cancelTipoProducto()">No</button>
                     </p>
                   </div>
                   <div class="box-body table-responsive no-padding">
@@ -61,13 +61,13 @@
                         <th style="width: 40px">Eliminar</th>
                       </tr>
                     
-                      <tr ng-repeat="row in tipoDocumentos">
+                      <tr ng-repeat="row in tipoProductos">
                         <td>{{$index + 1}}</td>
-                        <td>{{row.nombreDocumento}}</td>
+                        <td>{{row.nombre}}</td>
                         <td>{{row.descripcion}}</td>
                         
-                        <td><a ng-click="editTipoDocumento(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                        <td><a ng-click="deleteTipoDocumento(row)" class="btn btn-danger btn-xs">Eliminar</a></td> 
+                        <td><a ng-click="editTipoProducto(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                        <td><a ng-click="deleteTipoProducto(row)" class="btn btn-danger btn-xs">Eliminar</a></td> 
                       </tr>
                     
                     
